# subtiter

./: .gitignore  Makefile  docker-compose-prod.yaml  docker-compose-prod.yaml.ori  docker-compose.yaml  replace_klippers.py
backend/: .dockerignore  .flake8  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.dockerhub  Dockerfile.prod  Makefile  README.md  README_FARGATE_INDEX.md  STATE_MACHINE_IMPLEMENTATION.md  SUBTITLE_API_FIX.md  a.sh  crontab.example  insert_stripe_document_queue.sh  psql.sh  psql_prod.sh  psql_sandbox.sh  pyproject.toml  requirements.txt  restart_docker.sh  run_server.sh  run_server_docker.sh  run_server_prod.sh  test_config_parser.py
backend/.github/workflows/: deploy-fargate.yml
backend/animations/animation2/: short_animation.py
backend/animations/generate_shorts_animation/: generate_shorts_animation.py  prompt.md
backend/app/: config.py  main.py  run_ray_serve.py
backend/app/actors/: actor_chat.py
backend/app/api/: middleware.py
backend/app/api/klippers/: api_chat.py  user_shorts.py  user_subtitling.py  user_trimming.py  user_videos.py  video_upload.py
backend/app/api/subtiter/: api_chat.py  user_shorts.py  (+4 more)
backend/app/aws_app_stack/: cognito_config.py  facebook_token_verifier.py  google_token_verifier.py  klippers_cognito.py
backend/app/core/: auth.py  security.py
backend/app/dao/: user_dao.py
backend/app/db/: database.py  model_document.py  model_subtiter.py  seed.py
backend/app/db_polling/: email_manager.py  postgres_db_backup.py  stripe_document_meters.py.ori  user_videos_polling.py
backend/app/init/: dbmanager.py
backend/app/klipperscmd/: .dockerignore  .env.fargate  .gitignore  Makefile.fargate  build-and-push.sh  check_fonts.sh  clipper.py  config.py  entrypoint.sh  entrypoint_genshorts_child.sh  entrypoint_genshorts_parent.sh  entrypoint_genshorts_wholistic.sh  entrypoint_subtitling.sh  entrypoint_trimming.sh  env.fargate.template  fargate_run.py  fargate_run_test.py  generate_random_string.sh  pyproject.toml  run_app_genshorts.py  run_app_subtitling.py  run_app_trimming.py  run_lambda_complete_genshorts.py  run_lambda_complete_genshorts.sh  run_on_uploaded.sh.docker.local.sh  run_on_uploaded.sh.prod.fargate.sh  run_on_uploaded.sh.prod.sh  run_on_uploaded.sh.prod_cae.sh  run_on_uploaded.sh.rojev.fargate.sh  run_on_uploaded.sh.test.fargate.sh  run_on_uploaded.sh.test.sh  run_on_uploaded.sh.test_cae.sh  run_state_child_task.py  run_state_child_task.sh  run_state_machine.prod.sh  run_state_machine.py  run_state_machine.sh  run_state_machine_genshorts.prod.py  run_state_machine_genshorts.prod.sh  run_state_machine_subtitling.prod.py  (+9 more)
backend/app/public/: chat_screen.html  remote_chat_screen.html
backend/app/redis/: redis_utils.py
backend/app/schemas/: schema_chat.py  schema_klippers.py  schema_subtiter.py  schema_user.py
backend/app/service/: email_service.py  stripe_client.py
backend/app/subtitercmd/: .env.fargate  Dockerfile  Makefile  Makefile.fargate  build-and-push.sh  config.py  entrypoint.sh  entrypoint_genshorts.sh  entrypoint_genshorts_child.sh  entrypoint_genshorts_parent.sh  entrypoint_genshorts_wholistic.sh  entrypoint_subtitling.sh  entrypoint_trimming.sh  env.fargate.template  fargate_run.py  fargate_run_test.py  pyproject.toml  run.py  run.sh  run_app_genshorts.py  run_app_subtitling.py  run_app_trimming.py  run_lambda_complete_genshorts.py  run_lambda_complete_genshorts.sh  run_on_uploaded.sh.prod.fargate.sh  run_on_uploaded.sh.prod.sh  run_on_uploaded.sh.prod_cae.sh  run_on_uploaded.sh.rojev.fargate.sh  run_on_uploaded.sh.test.fargate.sh  run_on_uploaded.sh.test.sh  run_on_uploaded.sh.test_cae.sh  run_state_child_task.py  run_state_child_task.sh  run_state_machine.py  run_state_machine.sh  run_state_machine_genshorts.prod.py  run_state_machine_subtitling.prod.py  run_state_machine_trimming.prod.py  run_state_machine_trimming.prod.sh  run_state_parent_task.py  (+6 more)
backend/backups/: klippers_test_2025-10-29_19-19-51.sql  klippers_test_2025-10-29_19-22-53.sql
backend/docker_compose_volume/: pg_hba.conf
backend/email_templates/: request_signing_email_template.j2  view_signed_pdf_email_template.j2
backend/infra/resources/: .gitignore  Makefile  TROUBLESHOOTING_IAM.md  cognito.tf  fargate_task.tf  lambda_send_message.py  lambda_send_message.tf  main.tf  state_machine_genshorts.tf  state_machine_gensubtitling.tf  state_machine_gentrimming.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
backend/scripts/: README.md  backup_database.sh  backup_postgres.sh  calculate_ai_costs.py  create_s3_bucket_and_roles.sh  restore_database.sh  restore_postgres.sh  setup_auto_backup.sh  simulate_short_generation.py  sum_ai_costs.sh
backend/scripts/backups/: klippers_test_2025-10-29_22-19-35.sql
backend/tests/: conftest.py  render_email.py  test_auth.py  test_cognito_auth.py  test_cors.py  test_redis_websocket_integration.py
rayio-stream-demo/: .env.example  .flake8  .gitignore  pyproject.toml  run_server.sh  serve_config.yaml
rayio-stream-demo/app/: chat_actor.py  config.py  main.py  ray_serve.py  types.py  ws_connections.py
rayio-stream-demo/public/: chat_screen.html
(+498 files in other folders)
